removed button as it reloaded page

--- a/test.html
+++ b/test.html
@@ -19,10 +19,9 @@
 <body>
 	<form>
 		Input: <br>
-		<input type="text" id="input">
+		<input type="text" id="input" onchange='main()'>
 		Capitalized: <br>
 		<div id="output"></div>
-		<button onclick="main()">Go</button>
 	</form>
 
 </body>
