working version that displays image in popup

--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
 		Input: <br>
 		<input type="text" id="input" onchange='main()'>
 		Capitalized: <br>
-		<div id="output"></div>
+		<div id="output" height="100px" width="100px"></div>
 	</form>
 
 </body>
