--- a/popup.html
+++ b/popup.html
@@ -11,16 +11,14 @@
       body {
         font-family: Verdana, sans-serif;
         font-size: 100%;
-        height: 200px;
-        width: 400px;
+        height: 700px;
+        width: 700px;
       }
     </style>
   </head>
   <body>
-    <p>This is a test</p>
-    <input type="text" id="input" />
-    <div id="output"></div>
     <script src="popup.js"></script>
+    <div id="image"></div>
   </body>
 </html>
 
