--- a/background.html
+++ b/background.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="chrome_ex_oauthsimple.js"></script>
     <script type="text/javascript" src="chrome_ex_oauth.js"></script>
     <script type="text/javascript" src="onload.js"></script>
+    <script type="text/javascript" src="background.js"></script>
   </body>
 </html>
 
