'added upload function - still not working - trying to get the signature for the auth token formatted correctly'

--- a/background.html
+++ b/background.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="chrome_ex_oauth.js"></script>
     <script type="text/javascript" src="onload.js"></script>
     <script type="text/javascript" src="background.js"></script>
+    <script type="text/javascript" src="md5.js"></script>
   </body>
 </html>
 
