error that we dont have write privileges

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,7 @@
   <body>
     <script src="popup.js"></script>    
     <div id="image"></div>
+    <button id="upload-button">Upload</button>
   </body>
 </html>
 
