from pairing with zibi - using canvas to convert image from base64 dataURL to image blob. uploading not working with invalid api key response

--- a/popup.html
+++ b/popup.html
@@ -16,10 +16,12 @@
       }
 
     </style>
+    <script src="popup.js" defer="defer"></script>   
+    <script type="text/javascript" src="md5.js"></script>
   </head>
   <body>
-    <script src="popup.js"></script>    
-    <div id="image"></div>
+   <button id="upload-button">Upload</button>
+    <canvas id="image"></canvas>
   </body>
 </html>
 
